# dna-modal

./: .env.example  Dockerfile  README.md  app.py  dynamic_knowledge_loader.py  graders.py  inference.py  knowledge_graph_env.py  main_router_integration.py  openenv.yaml  projection.py  pyproject.toml  render.yaml  requirements.txt  skill_adapter.py  test_glm.py
brain_data/: concept_memory.pkl  faiss.index  feature_registry.pkl  letter_vec.pkl
knowledge_graph_env_project/: Dockerfile
knowledge_graph_env_project/brain_data/: concept_memory.pkl  faiss.index  feature_registry.pkl  letter_vec.pkl
server/: app.py
