[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge_graph_env"
version = "1.0.0"
description = "OpenEnv environment for customer support reasoning"
authors = [{name = "OutstandingOm"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "faiss-cpu",
    "fastapi",
    "uvicorn",
    "httpx",
    "pydantic",
    "openai",
]

[project.scripts]
inference = "inference:main"

[tool.setuptools]
py-modules = ["knowledge_graph_env", "inference"]
